[package]
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
categories = [
    "api-bindings",
    "encoding",
]
description = "Idiomatic types for building a robust JSON API"
documentation = "https://docs.rs/json-api/0.1"
license = "MIT/Apache-2.0"
name = "json-api"
readme = "README.md"
repository = "https://github.com/zacharygolba/json-api-rs"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
http = "0.1"
percent-encoding = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.3.0"

[dependencies.ordermap]
features = ["serde-1"]
version = "0.3"

[workspace]
members = ["rocket"]
