[package]
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
categories = [
    "api-bindings",
    "encoding",
]
description = "Idiomatic types for building a robust JSON API"
documentation = "https://docs.rs/json-api/0.4"
license = "MIT/Apache-2.0"
name = "json-api"
readme = "README.md"
repository = "https://github.com/zacharygolba/json-api-rs"
version = "0.4.1"

[badges.appveyor]
repository = "zacharygolba/json-api-rs"

[badges.circle-ci]
repository = "zacharygolba/json-api-rs"

[badges.codecov]
repository = "zacharygolba/json-api-rs"

[dependencies]
error-chain = "0.11"
http = "0.1"
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.3"

[dependencies.ordermap]
features = ["serde-1"]
version = "0.3"

[workspace]
members = ["rocket"]
